// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  data-cy="test-hero"
  style={
    Object {
      "alignContent": "center",
      "display": "grid",
      "gridTemplateColumns": "1fr minmax(auto,  1280px) 1fr",
      "marginBottom": "6rem",
      "minHeight": "35rem",
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "grid",
        "gridArea": "1 / 2 / 1 / 2",
        "gridGap": ".5rem",
        "gridTemplateColumns": "3fr 5fr",
        "padding": "0 5rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignSelf": "end",
          "gridArea": "1 / 1 / 1 / 1",
        }
      }
    >
      <p
        style={
          Object {
            "textTransform": "uppercase",
          }
        }
      >
        Instrument
      </p>
      <h1>
        2D-C/P
      </h1>
      <p
        style={
          Object {
            "fontSize": "x-large",
          }
        }
      >
        2D-C/P Hydrometeor Imaging Probe
      </p>
    </div>
    <div
      style={
        Object {
          "alignSelf": "start",
          "gridArea": "2 / 1 / 2 / 1",
        }
      }
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
    <div
      style={
        Object {
          "gridArea": "1 / 2 / 3 / 3",
        }
      }
    >
      <div>
        children
      </div>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  data-cy="undefined-hero"
  style={
    Object {
      "alignContent": "center",
      "display": "grid",
      "gridTemplateColumns": "1fr minmax(auto,  1280px) 1fr",
      "marginBottom": "6rem",
      "minHeight": "35rem",
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "grid",
        "gridArea": "1 / 2 / 1 / 2",
        "gridGap": ".5rem",
        "gridTemplateColumns": "5fr 3fr",
        "padding": "0 5rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignSelf": "end",
          "gridArea": "1 / 1 / 1 / 1",
        }
      }
    >
      <p
        style={
          Object {
            "textTransform": "uppercase",
          }
        }
      >
        Instrument
      </p>
      <h1>
        2D-C/P
      </h1>
      <p
        style={
          Object {
            "fontSize": "x-large",
          }
        }
      >
        2D-C/P Hydrometeor Imaging Probe
      </p>
    </div>
    <div
      style={
        Object {
          "alignSelf": "start",
          "gridArea": "2 / 1 / 2 / 1",
        }
      }
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
    <div
      style={
        Object {
          "gridArea": "1 / 2 / 3 / 3",
        }
      }
    >
      <div>
        children
      </div>
    </div>
  </div>
</section>
`;
